--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1,h2,h3,.header{
 .header{
   background: 
     linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
-    url("images/Grand\ Canyon\ 4K\ backgrond\ top\ pick.jpg") center/cover no-repeat;
+    url("Images/Grand\ Canyon\ 4K\ backgrond\ top\ pick.jpg") center/cover no-repeat;
   color:var(--on-dark);
   padding:60px 20px;
   text-align:center;
